# bvm

./: .bvmrc.json  .dprintrc.json  .gitignore  Cargo.toml  README.md  bvm-init.sh  bvm.cmd  bvm.json  bvm.ps1  bvm.sh  dprint.json
.github/workflows/: ci.yml
args_test_util/: Cargo.toml
args_test_util/src/: main.rs
cli/: Cargo.toml  bvm-functions.sh  bvm-init.sh  bvm.cmd  bvm.ps1  bvm.sh
cli/src/: arg_parser.rs  main.rs  types.rs
cli/src/configuration/: find_config_file.rs  manipulation.rs  mod.rs  read_config_file.rs
cli/src/environment/: common.rs  environment.rs  mod.rs  real_environment.rs  test_environment.rs
cli/src/plugins/: get_plugin_dir.rs  helpers.rs  manifest.rs  mod.rs  plugins_mut.rs  serialized_plugin_file.rs
cli/src/plugins/setup/: create_shim.rs  get_plugin_file.rs  read_plugin_file.rs  setup_plugin.rs
cli/src/registry/: download_registry_file.rs  manifest.rs  mod.rs
cli/src/test_builders/: bvmrc_builder.rs  environment_builder.rs  mod.rs  plugin_file_builder.rs
cli/src/utils/: extract_tar.rs  extract_zip.rs  get_path_executable_path.rs  get_shim_dir.rs  gz_decompress.rs  mod.rs  string_utils.rs  url.rs
cli/tests/: integration_tests.rs  setup-unix.sh  setup-windows.cmd  setup-windows.ps1  setup_args_test_util.sh
cli/tests/specs/: tests.cmd  tests.cmd.out  tests.ps1  tests.ps1.out  tests.sh  tests.sh.out
docs/: package.json  pnpm-lock.yaml
scripts/: bvm-installer.nsi  install.ps1  install.sh  setup_args_test_util.ps1  setup_args_test_util.sh
scripts/installer/: bvm-installer.nsi
scripts/installer/setup-app/: Cargo.toml
scripts/installer/setup-app/src/: main.rs
src/: arg_parser.rs  main.rs  types.rs
src/cache/: manifest.rs  mod.rs
src/configuration/: find_config_file.rs  manipulation.rs  mod.rs  read_config_file.rs
src/environment/: common.rs  environment.rs  mod.rs  real_environment.rs  test_environment.rs  unix.rs  variable_names.rs  windows.rs
src/plugins/: create_path_script.rs  create_shim.rs  environment_manifest.rs  get_plugin_dir.rs  helpers.rs  manifest.rs  mod.rs  plugins_mut.rs  read_plugin_file.rs  serialized_plugin_file.rs  setup_plugin.rs
src/plugins/setup/: create_shim.rs  get_plugin_file.rs  mod.rs  read_plugin_file.rs  setup_plugin.rs
src/registry/: download_registry_file.rs  manifest.rs
src/test_builders/: bvmrc_builder.rs  environment_builder.rs  mod.rs  plugin_file_builder.rs
src/utils/: download_file.rs  extract_tar.rs  extract_zip.rs  fs.rs  get_bin_dir.rs  get_bytes_hash.rs  get_cache_dir.rs  get_path_executable_path.rs  get_shim_dir.rs  get_time_secs.rs  get_user_data_dir.rs  gz_decompress.rs  mod.rs  parse_checksum_url.rs  run_shell_command.rs  string_utils.rs
test/: setup-unix.sh  setup-windows.cmd  setup-windows.ps1  tests.cmd
test/specs/: tests.out  tests.txt
tests/: integration_tests.rs
tests/specs/: tests.cmd  tests.cmd.out  tests.ps1  tests.ps1.out  tests.sh
