[package]
name = "bvm"
description = "Proof of concept"
version = "0.0.17"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_dirs = { version = "2", package = "app_dirs2" }
async-trait = "0.1.30"
bytes = "0.5.4"
clap = "2.33.0"
dprint-cli-core = { version = "0.1.1" }
jsonc-parser = { version = "0.14.0" }
flate2 = "1.0.17"
tar = "0.4.30"
futures = "0.3.5"
serde = { version = "1.0.88", features = ["derive"] }
serde_json = "1.0"
semver = "0.10.0"
tokio = { version = "0.2", features = ["full"] }
url = "2.1.1"
zip = "0.5.6"

[dev-dependencies]
path-clean = "0.1.0"
pretty_assertions = "0.6.1"
