[package]
name = "bvm"
description = "Proof of concept"
version = "0.0.25"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2018"
license = "MIT"

[[bin]]
name = "bvm-bin"
path = "src/main.rs"

[dependencies]
dirs = "3.0.1"
async-trait = "0.1.30"
clap = "2.33.0"
dprint-cli-core = { version = "0.2.1" }
jsonc-parser = { version = "0.14.0" }
flate2 = "1.0.17"
tar = "0.4.30"
futures = "0.3.5"
serde = { version = "1.0.88", features = ["derive"] }
serde_json = "1.0"
semver = "0.10.0"
semver-parser = "0.9.0"
tokio = { version = "0.2", features = ["full"] }
url = "2.1.1"
zip = "0.5.6"
[target.'cfg(windows)'.dependencies]
winreg = "0.7.0"

[dev-dependencies]
path-clean = "0.1.0"
pretty_assertions = "0.6.1"
