[package]
name = "bvm"
description = "Binary version manager."
version = "0.2.1"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2018"
license = "MIT"

[[bin]]
name = "bvm-bin"
path = "src/main.rs"

[dependencies]
dirs = "3.0.1"
clap = "2.33.0"
dprint-cli-core = { version = "0.5.2" }
jsonc-parser = { version = "0.14.0" }
flate2 = "1.0.17"
lazy_static = "1.4.0"
regex = "1"
tar = "0.4.30"
serde = { version = "1.0.88", features = ["derive"] }
serde_json = "1.0"
semver = "0.10.0"
url = "2.1.1"
zip = "0.5.6"

[target.'cfg(windows)'.dependencies]
winreg = "0.7.0"

[dev-dependencies]
path-clean = "0.1.0"
pretty_assertions = "0.6.1"
