[package]
name = "bvm"
description = "Binary version manager."
version = "0.4.2"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2021"
license = "MIT"

[[bin]]
name = "bvm-bin"
path = "src/main.rs"

[dependencies]
dirs = "4.0.0"
clap = "2.33.3"
dprint-cli-core = { version = "0.9.0" }
jsonc-parser = { version = "0.17.0" }
flate2 = "1.0.22"
lazy_static = "1.4.0"
regex = "1"
tar = "0.4.37"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
semver = "1.0.4"
url = "2.2.2"
zip = "0.5.13"

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"

[dev-dependencies]
path-clean = "0.1.0"
pretty_assertions = "0.6.1"
strip-ansi-escapes = "0.1.1"
